--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="top-container">
         <img class="top-cloud" src="./cloud.png" alt="cloud-img">
         <h1>I'm Vaibhav.</h1>
-        <h2>A Web Developer.</h2>
+        <h2>A Tester.</h2>
         <img class="bottom-cloud" src="./cloud.png" alt="cloud-img">
         <img src="./mountain.png" alt="mountain">
 
